# cmake_template

./: CMakeLists.txt  README.md  config.sh
apps/: CMakeLists.txt  testfoo.cpp
lib/foo/: CMakeLists.txt
lib/foo/inc/: foo.hpp
lib/foo/src/: foo.cpp
lib/parser/: CMakeLists.txt
lib/parser/inc/: parser.hpp
lib/parser/src/: parser.cpp
test/: CMakeLists.txt  test.cpp  testall.cpp  testfoo.cpp
